--- a/public/css/table.css
+++ b/public/css/table.css
@@ -14,30 +14,32 @@
     border-collapse: collapse;
 }
 
+
 .table tr {
     margin: 0;
     padding: 0;
 }
 
-.table tr th {
+.table thead tr th {
     margin: 0;
     padding: 0;
 }
 
-.table tr td {
+.table tbody tr td {
     color: #181143;
     font-size: 1rem;
     padding: 5px;
     border-top: 1px solid #bdbdbd;
     text-align: center;
+    opacity: 1;
 }
 
-.table tr td a {
+.table tbody tr td a {
     text-decoration: none;
     color: #181143;
 }
 
-.table tr td a:hover {
+.table tbody tr td a:hover {
     text-decoration: underline;
 }
 
@@ -167,4 +169,62 @@
 
 .process-btn:hover .process-normal {
     visibility: hidden;
+}
+
+
+/*Celulares*/
+/*Vertical*/
+@media (max-width: 480px) and (orientation: portrait) {
+    .table thead {
+        display: none;
+    }
+
+    .table-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .table-container h1 {
+        font-size: 1.5rem;
+    }
+
+    .table {
+        display: block;
+        width: 80%;
+    }
+
+    .table tbody, .table tr, .table td {
+        display: block;
+        width: 100%;
+    }
+
+    .table tr {
+        margin-bottom: 20px;
+    }
+
+    .table tbody tr td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+        font-size: 0.9rem;
+    }
+
+    .table td:before {
+        content: attr(data-label);
+        position: absolute;
+        left: 0;
+        width: 50%;
+        padding-left: 15px;
+        font-size: 0.9rem;
+        font-weight: 500;
+        color: #181143;
+        text-align: left;
+    }
+
+    .process-btn button{
+        width: 130px;
+        height: 50px;
+        margin-left: 20%;
+    }
 }
