--- a/public/css/table.css
+++ b/public/css/table.css
@@ -227,4 +227,9 @@
         height: 50px;
         margin-left: 20%;
     }
+
+    .table-btn {
+        display: flex;
+        flex-direction: row;
+    }
 }
